added some info to index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <section>
+    <h1>Hi, I'm Rishi.</h1>
+
+    <h3>A bit about me</h3>
+    <p>I'm a physics graduate from the University of Warwick who loves learning new technologies. 
+    Alongside developing my coding skills in languages such as Python and C#, 
+    I'd like to learn more web orientated tools such as Javascript and React. </p>
+
+    <a href=""></a>
+
+    </section>
 </body>
 </html>
