added sections for works and css styling to seperate them. added contact info

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,46 @@
     <link rel="stylesheet" href="styles.css">
     <title>Portfolio</title>
 </head>
+
 <body>
+
+    <h1 id="page-title">Hi, I'm Rishi.</h1>
+
+    <div id="contact-info">
+        <p>rishi_bhugobaun@yahoo.co.uk | <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/"
+                target="_blank">LinkedIn</a></p>
+    </div>
+
+
     <section>
-    <h1>Hi, I'm Rishi.</h1>
+        <h3>A bit about me</h3>
+        <p>I'm a physics graduate who loves learning new technologies.
+            Alongside developing my coding skills in languages such as Python and C#,
+            I'd like to learn more web orientated tools such as Javascript and React. </p>
+    </section>
 
-    <h3>A bit about me</h3>
-    <p>I'm a physics graduate from the University of Warwick who loves learning new technologies. 
-    Alongside developing my coding skills in languages such as Python and C#, 
-    I'd like to learn more web orientated tools such as Javascript and React. </p>
 
-    <a href=""></a>
+    <img src="" alt="">
+
+    <section>
+        <h3>Current Work</h3>
+
+        <ul>
+            <li>This website.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Previous Work</h3>
 
     </section>
+
+    <section>
+        <h3>Future Work</h3>
+
+        <p>¯\_(ツ)_/¯</p>
+    </section>
+
 </body>
+
 </html>
