Added new sections, centred content and reduced width. Added background

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <h1 id="page-title">Hi, I'm Rishi.</h1>
 
     <div id="contact-info">
-        <p>rishi_bhugobaun@yahoo.co.uk | <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/"
-                target="_blank">LinkedIn</a></p>
+        <p>rishi_bhugobaun@yahoo.co.uk | 
+        <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/"
+                target="_blank">LinkedIn</a> |
+        <a href="https://github.com/theduckfliesagain"
+        target="_blank">Github</a>
+        </p>
     </div>
+
 
 
     <section>
@@ -26,8 +31,13 @@
             I'd like to learn more web orientated tools such as Javascript and React. </p>
     </section>
 
+    <section>
+        <h3>Things people definitely said about me</h3>
+        <blockquote>
+            "Rishi is 100% human, not a robot."
+        </blockquote>
+    </section>
 
-    <img src="" alt="">
 
     <section>
         <h3>Current Work</h3>
