--- a/index.html
+++ b/index.html
@@ -25,14 +25,40 @@
 
 
     <section>
-        <h3>A bit about me</h3>
+        <h2>A bit about me</h2>
         <p>I'm a physics graduate who loves learning new technologies.
             Alongside developing my coding skills in languages such as Python and C#,
             I'd like to learn more web orientated tools such as Javascript and React. </p>
     </section>
 
     <section>
-        <h3>Things people definitely said about me</h3>
+        <h2>Skills</h2>
+        <div class="container">
+            <div class="item">
+                <h3 class="skill-title">HTML</h3>
+                <div class="progress-bar">
+                    <span style="width: 20%"></span>
+                </div>
+            </div>
+            <div class="item">
+                <h3 class="skill-title">CSS</h3>
+                <div class="progress-bar">
+                    <span style="width: 20%"></span>
+                </div>
+            </div>
+            <div class="item">
+                <h3 class="skill-title">Binging Netflix</h3>
+                <div class="progress-bar">
+                    <span style="width: 65%"></span>
+                </div>
+            </div>
+
+        </div>
+        
+    </section>
+
+    <section>
+        <h2>Things people definitely said about me</h2>
         <blockquote>
             "Rishi is 100% human, not a robot."
         </blockquote>
@@ -40,7 +66,7 @@
 
 
     <section>
-        <h3>Current Work</h3>
+        <h2>Current Work</h2>
 
         <ul>
             <li>This website.</li>
@@ -48,12 +74,12 @@
     </section>
 
     <section>
-        <h3>Previous Work</h3>
+        <h2>Previous Work</h2>
 
     </section>
 
     <section>
-        <h3>Future Work</h3>
+        <h2>Future Work</h2>
 
         <p>¯\_(ツ)_/¯</p>
     </section>
