add dev packages and include

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles.css">
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/6180fcdf0c.js" crossorigin="anonymous"></script>
+    <!-- SCRIPTS -->
+    <script defer src="bundle.js"></script>
     <title>Portfolio</title>
 </head>
 
@@ -28,6 +30,8 @@
         </ul>
     </nav>
 
+    <main>
+        
     <section>
         <a id="about"></a>
         <h2>A bit about me</h2>
@@ -102,6 +106,8 @@
             <a href="https://github.com/theduckfliesagain" target="_blank">Github</a>
         </p>
     </section>
+    </main>
+
 </body>
 
 </html>
