add basic animations and restyle

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/6180fcdf0c.js" crossorigin="anonymous"></script>
     <!-- SCRIPTS -->
+    <!-- prevents scroll on refresh -->
+    <!-- <script defer>history.scrollRestoration = "manual"</script>  -->
     <script defer src="bundle.js"></script>
     <title>Portfolio</title>
 </head>
 
 <body>
     <header>
-        <h1 id="page-title">Hi, I'm Rishi</h1>
-        <i id="arrow " class="fas fa-chevron-down"></i>
+        <h1 id="page-title">Hi, <br> I'm Rishi</h1>
+        <i id="arrow" class="fas fa-chevron-down"></i>
     </header>
 
     <nav>
