--- a/index.html
+++ b/index.html
@@ -7,114 +7,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- STYLES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/css/main.css">
+    <link rel="stylesheet" href="./styles/css/stars.css">
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/6180fcdf0c.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
+        integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
+        crossorigin="anonymous"></script>
     <!-- SCRIPTS -->
-    <!-- prevents scroll on refresh -->
-    <!-- <script defer>history.scrollRestoration = "manual"</script>  -->
-    <script defer src="bundle.js"></script>
+    <script src="./js/helpers.js"></script>
+    <script src="./js/github.js"></script>
+    <!-- <script defer src="./js/animations.js"></script> -->
+    <script src="./js/index.js"></script>
     <title>Portfolio</title>
 </head>
 
 <body>
-    <canvas id="background" width=100vw height= 100vh> -->
-    </canvas>
-    <header>
-        <h1 id="page-title">Hi, <br> I'm Rishi</h1>
-        <i id="arrow" class="fas fa-chevron-down"></i>
-    </header>
+    <div class="stars">
 
-    <nav>
-        <ul>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#work">WORK</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-        </ul>
-    </nav>
+    </div>
 
-    <main>
+    <div class="container">
+        <main>
+            <header class="intro">
+                <h1 id="page-title">Hi, <br> I'm Rishi</h1>
+            </header>
 
-        <section>
-            <a id="about"></a>
-            <h2>A bit about me</h2>
+            <section class="about">
+                <a></a>
+                <h2>A bit about me</h2>
 
-            <p>I'm a physics graduate who loves learning new technologies.
-                Alongside developing my coding skills in languages such as Python and C#,
-                I'd like to learn more web orientated tools such as Javascript and React. </p>
-        </section>
+                <p>
+                    Hey there! I'm a physics graduate who loves learning new technologies. I'm currently training to be
+                    a full stack developer with futureproof, where I've been learning things like Javascript, SQL and
+                    NoSQL Databases, React and lots of others.
+                </p>
+                <br>
+                <p>
+                    Other interests of mine include creating visual effects for my (ridiculous) short films, and
+                    anything to do with space - scientific and industry developments and of course sci-fi films, tv and
+                    books!
+                </p>
+            </section>
 
-        <section>
-            <a id="skills"></a>
-            <h2>Skills</h2>
+            <section class="skills">
+                <a></a>
+                <h2>Skills</h2>
+                <p>
+                    I'm always looking to learn new things to widen my skillset, but here are some of software and
+                    technologies I've had experience with (programming and otherwise!).
+                </p>
+                <br>
+                <div class="item-container">
+                    <div class="item">
+                        <h3 class="skill-title">Front End</h3>
+                        <p> <i class="fab fa-html5"></i> HTML</p>
+                        <p> <i class="fab fa-css3-alt"></i> CSS</p>
+                        <p> <i class="fab fa-js"></i> JS</p>
+                        <p> <i class="fab fa-react"></i> React</p>
+                    </div>
+                    <div class="item">
+                        <h3 class="skill-title">Back End</h3>
+                        <p> <i class="fab fa-node-js"></i> Node.js</p>
+                        <p> <i class="express"></i> Express.js</p>
+                        <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" /> PostgreSQL</p>
+                        <p> <i class="fas fa-database"></i> MongoDB</p>
+                        <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png" /> C#</p>
+                        <p> <i class="fab fa-python"></i> Python</p>
+                    </div>
+                    <div class="item">
+                        <h3 class="skill-title">Other</h3>
+                        <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" /> Adobe Suite</p>
+                        <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" /> Blender </p>
 
-            <div class="container">
-                <div class="item">
-                    <h3 class="skill-title">HTML</h3>
-                    <div class="progress-bar">
-                        <span style="width: 20%"></span>
                     </div>
                 </div>
-                <div class="item">
-                    <h3 class="skill-title">CSS</h3>
-                    <div class="progress-bar">
-                        <span style="width: 20%"></span>
+            </section>
+
+            <section class="work">
+                <h2>Recent Projects</h2>
+
+                <p>Here are some of things I've worked on recently while training at futureproof!</p>
+
+                <div class="item-container">
+                    <div class="item project">
+                        <h3>Consoul.log
+                            <a class="icon github" href="https://github.com/theduckfliesagain/consoul.log"
+                                target="_blank"></a>
+                        </h3>
+
+                        <a href="https://consoul-log.netlify.app/" target="_blank">
+                            <video autoplay muted loop src="https://thumbs.gfycat.com/JovialShyCottontail-mobile.mp4"
+                                alt=""></video>
+                        </a>
+                        <p>An anonymous commmunity journaling platform for tech nerds. Built using HTML, CSS and Node.js
+                            with and Express.js backend that saves data to a json file.</p>
+                    </div>
+                    <div class="item">
+
+                    </div>
+                    <div class="item">
                     </div>
                 </div>
-                <div class="item">
-                    <h3 class="skill-title">Binging Netflix</h3>
-                    <div class="progress-bar">
-                        <span style="width: 65%"></span>
-                    </div>
+
+                <h2>Past experience</h2>
+                <div class="item-container">
                 </div>
 
-            </div>
+                <h2>Education</h2>
+                <div class="item-container">
+                    <div class="item education">
+                        <h3>University of Warwick
+                            <span> Physics MPhys (Hons), First Class</span>
+                        </h3>
+                        <ul>
+                            <li>Additional modules including Particle Physics, Astronomy and Computational Physics
+                                (Python and C)</li>
+                            <li>Masters: processing stellar X-ray data from space telescopes using Python.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
-        </section>
+            <section class="contact">
+                <h2>Contact</h2>
+                <div class="contact"></div>
+                <ul>
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <a href="mailto:rishi_bhugobaun@yahoo.co.uk">
+                            rishi_bhugobaun@yahoo.co.uk
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/"
+                            target="_blank"> LinkedIn</a>
+                    </li>
+                    <li>
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/theduckfliesagain" target="_blank">Github</a>
+                    </li>
+                    </ul>
+            </section>
+        </main>
 
-        <section>
-            <h2>Things people definitely said about me</h2>
-            <blockquote>
-                "Rishi is 100% human, not a robot."
-            </blockquote>
-        </section>
-
-
-        <!-- <section>
-            <a id="work"></a>
-            <h2>Work</h2>
-
-            <h2>Current Work</h2>
-
-            <ul>
-                <li>This website.</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Previous Work</h2>
-
-        </section>
-
-        <section>
-            <h2>Future Work</h2>
-
-            <p>¯\_(ツ)_/¯</p>
-        </section> -->
-
-        <section>
-            <a id="contact"></a>
-            <h2>Contact</h2>
-            <p>rishi_bhugobaun@yahoo.co.uk |
-                <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/" target="_blank">LinkedIn</a> |
-                <a href="https://github.com/theduckfliesagain" target="_blank">Github</a>
-            </p>
-        </section>
-    </main>
-
- 
-
+        <nav>
+            <button class="about">ABOUT</button>
+            <button class="skills">SKILLS</button>
+            <button class="work">WORK</button>
+            <button class="contact">CONTACT</button>
+        </nav>
+    </div>
 </body>
 
 </html>
