add root container to enable page dark mode

--- a/index.html
+++ b/index.html
@@ -23,142 +23,156 @@
 </head>
 
 <body>
-    <div class="stars">
+    <div class="root">
+        <div class="menu">
+            <button id="theme-switch" class="fas fa-adjust">
+                <!-- <i class="fas fa-adjust"></i> -->
+            </button>
+        </div>
 
-    </div>
+        <div class="stars">
 
-    <div class="container">
-        <main>
-            <header class="intro">
-                <h1 id="page-title">Hi, <br> I'm Rishi</h1>
-            </header>
+        </div>
 
-            <section class="about">
-                <a></a>
-                <h2>A bit about me</h2>
+        <div class="container">
+            <main>
+                <header class="intro">
+                    <h1 id="page-title">Hi, <br> I'm Rishi</h1>
+                </header>
 
-                <p>
-                    Hey there! I'm a physics graduate who loves learning new technologies. I'm currently training to be
-                    a full stack developer with futureproof, where I've been learning things like Javascript, SQL and
-                    NoSQL Databases, React and lots of others.
-                </p>
-                <br>
-                <p>
-                    Other interests of mine include creating visual effects for my (ridiculous) short films, and
-                    anything to do with space - scientific and industry developments and of course sci-fi films, tv and
-                    books!
-                </p>
-            </section>
+                <section class="about">
+                    <a></a>
+                    <h2>A bit about me</h2>
 
-            <section class="skills">
-                <a></a>
-                <h2>Skills</h2>
-                <p>
-                    I'm always looking to learn new things to widen my skillset, but here are some of software and
-                    technologies I've had experience with (programming and otherwise!).
-                </p>
-                <br>
-                <div class="item-container">
-                    <div class="item">
-                        <h3 class="skill-title">Front End</h3>
-                        <p> <i class="fab fa-html5"></i> HTML</p>
-                        <p> <i class="fab fa-css3-alt"></i> CSS</p>
-                        <p> <i class="fab fa-js"></i> JS</p>
-                        <p> <i class="fab fa-react"></i> React</p>
+                    <p>
+                        Hey there! I'm a physics graduate who loves learning new technologies. I'm currently training to
+                        be
+                        a full stack developer with futureproof, where I've been learning things like Javascript, SQL
+                        and
+                        NoSQL Databases, React and lots of others.
+                    </p>
+                    <br>
+                    <p>
+                        Other interests of mine include creating visual effects for my (ridiculous) short films, and
+                        anything to do with space - scientific and industry developments and of course sci-fi films, tv
+                        and
+                        books!
+                    </p>
+                </section>
+
+                <section class="skills">
+                    <a></a>
+                    <h2>Skills</h2>
+                    <p>
+                        I'm always looking to learn new things to widen my skillset, but here are some of software and
+                        technologies I've had experience with (programming and otherwise!).
+                    </p>
+                    <br>
+                    <div class="item-container">
+                        <div class="item">
+                            <h3 class="skill-title">Front End</h3>
+                            <p> <i class="fab fa-html5"></i> HTML</p>
+                            <p> <i class="fab fa-css3-alt"></i> CSS</p>
+                            <p> <i class="fab fa-js"></i> JS</p>
+                            <p> <i class="fab fa-react"></i> React</p>
+                        </div>
+                        <div class="item">
+                            <h3 class="skill-title">Back End</h3>
+                            <p> <i class="fab fa-node-js"></i> Node.js</p>
+                            <p> <i class="express"></i> Express.js</p>
+                            <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" /> PostgreSQL</p>
+                            <p> <i class="fas fa-database"></i> MongoDB</p>
+                            <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png" /> C#</p>
+                            <p> <i class="fab fa-python"></i> Python</p>
+                        </div>
+                        <div class="item">
+                            <h3 class="skill-title">Other</h3>
+                            <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" /> Adobe Suite
+                            </p>
+                            <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" /> Blender </p>
+
+                        </div>
                     </div>
-                    <div class="item">
-                        <h3 class="skill-title">Back End</h3>
-                        <p> <i class="fab fa-node-js"></i> Node.js</p>
-                        <p> <i class="express"></i> Express.js</p>
-                        <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" /> PostgreSQL</p>
-                        <p> <i class="fas fa-database"></i> MongoDB</p>
-                        <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png" /> C#</p>
-                        <p> <i class="fab fa-python"></i> Python</p>
+                </section>
+
+                <section class="work">
+                    <h2>Recent Projects</h2>
+
+                    <p>Here are some of things I've worked on recently while training at futureproof!</p>
+
+                    <div class="item-container">
+                        <div class="item project">
+                            <h3>Consoul.log
+                                <a class="icon github" href="https://github.com/theduckfliesagain/consoul.log"
+                                    target="_blank"></a>
+                            </h3>
+
+                            <a href="https://consoul-log.netlify.app/" target="_blank">
+                                <video autoplay muted loop
+                                    src="https://thumbs.gfycat.com/JovialShyCottontail-mobile.mp4" alt=""></video>
+                            </a>
+                            <p>An anonymous commmunity journaling platform for tech nerds. Built using HTML, CSS and
+                                Node.js
+                                with and Express.js backend that saves data to a json file.</p>
+                        </div>
+                        <div class="item">
+
+                        </div>
+                        <div class="item">
+                        </div>
                     </div>
-                    <div class="item">
-                        <h3 class="skill-title">Other</h3>
-                        <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" /> Adobe Suite</p>
-                        <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" /> Blender </p>
 
+                    <h2>Past experience</h2>
+                    <div class="item-container">
                     </div>
-                </div>
-            </section>
 
-            <section class="work">
-                <h2>Recent Projects</h2>
-
-                <p>Here are some of things I've worked on recently while training at futureproof!</p>
-
-                <div class="item-container">
-                    <div class="item project">
-                        <h3>Consoul.log
-                            <a class="icon github" href="https://github.com/theduckfliesagain/consoul.log"
-                                target="_blank"></a>
-                        </h3>
-
-                        <a href="https://consoul-log.netlify.app/" target="_blank">
-                            <video autoplay muted loop src="https://thumbs.gfycat.com/JovialShyCottontail-mobile.mp4"
-                                alt=""></video>
-                        </a>
-                        <p>An anonymous commmunity journaling platform for tech nerds. Built using HTML, CSS and Node.js
-                            with and Express.js backend that saves data to a json file.</p>
+                    <h2>Education</h2>
+                    <div class="item-container">
+                        <div class="item education">
+                            <h3>University of Warwick
+                                <span> Physics MPhys (Hons), First Class</span>
+                            </h3>
+                            <ul>
+                                <li>Additional modules including Particle Physics, Astronomy and Computational Physics
+                                    (Python and C)</li>
+                                <li>Masters: processing stellar X-ray data from space telescopes using Python.</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="item">
+                </section>
 
-                    </div>
-                    <div class="item">
-                    </div>
-                </div>
-
-                <h2>Past experience</h2>
-                <div class="item-container">
-                </div>
-
-                <h2>Education</h2>
-                <div class="item-container">
-                    <div class="item education">
-                        <h3>University of Warwick
-                            <span> Physics MPhys (Hons), First Class</span>
-                        </h3>
-                        <ul>
-                            <li>Additional modules including Particle Physics, Astronomy and Computational Physics
-                                (Python and C)</li>
-                            <li>Masters: processing stellar X-ray data from space telescopes using Python.</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-
-            <section class="contact">
-                <h2>Contact</h2>
-                <div class="contact"></div>
-                <ul>
-                    <li>
-                        <i class="fas fa-envelope"></i>
-                        <a href="mailto:rishi_bhugobaun@yahoo.co.uk">
-                            rishi_bhugobaun@yahoo.co.uk
-                        </a>
-                    </li>
-                    <li>
-                        <i class="fab fa-linkedin"></i>
-                        <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/"
-                            target="_blank"> LinkedIn</a>
-                    </li>
-                    <li>
-                        <i class="fab fa-github"></i>
-                        <a href="https://github.com/theduckfliesagain" target="_blank">Github</a>
-                    </li>
+                <section class="contact">
+                    <h2>Contact</h2>
+                    <div class="contact"></div>
+                    <ul>
+                        <li>
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:rishi_bhugobaun@yahoo.co.uk">
+                                rishi_bhugobaun@yahoo.co.uk
+                            </a>
+                        </li>
+                        <li>
+                            <i class="fab fa-linkedin"></i>
+                            <a href="https://www.linkedin.com/in/rishi-bhugobaun-756387175/" target="_blank">
+                                LinkedIn</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-github"></i>
+                            <a href="https://github.com/theduckfliesagain" target="_blank">Github</a>
+                        </li>
                     </ul>
-            </section>
-        </main>
+                </section>
+            </main>
 
-        <nav>
-            <button class="about">ABOUT</button>
-            <button class="skills">SKILLS</button>
-            <button class="work">WORK</button>
-            <button class="contact">CONTACT</button>
-        </nav>
+            <nav>
+                <button class="about">ABOUT</button>
+                <button class="skills">SKILLS</button>
+                <button class="work">WORK</button>
+                <button class="contact">CONTACT</button>
+            </nav>
+        </div>
     </div>
+
 </body>
 
 </html>
