--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <li>
                             <i class="fas fa-envelope"></i>
                             <a href="mailto:rishi_bhugobaun@yahoo.co.uk">
-                                rishi_bhugobaun@yahoo.co.uk
+                                rishi_bhugobaun<span class="break">@yahoo.co.uk</span>
                             </a>
                         </li>
                         <li>
