--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./styles/css/main.css">
-    <link rel="stylesheet" href="./styles/css/stars.css">
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/6180fcdf0c.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
         integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
         crossorigin="anonymous"></script>
     <script defer src="bundle.js"></script>
-    <title>Portfolio</title>
+    <title>Rishi B - Portfolio</title>
 </head>
 
 <body>
@@ -23,6 +22,7 @@
         <div class="menu">
             <button id="theme-switch" class="fas fa-adjust"></button>
             <button id="anim-switch" class="fas fa-stop-circle"></button>
+            <!-- <button id="anim-switch" class="fas fa-stop-circle"></button> -->
         </div>
 
         <div class="stars">
