restructure menu buttons and styling

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 <body>
     <div id="root">
         <div class="menu">
-            <button id="theme-switch" class="fas fa-adjust"></button>
-            <button id="anim-switch" class="fas fa-stop-circle"></button>
-            <!-- <button id="anim-switch" class="fas fa-stop-circle"></button> -->
+            <div class="menu-btn">
+                <button id="theme-switch" class="fas fa-adjust"></button>
+                <span class="tooltip">Toggle theme</span>
+            </div>
+            <div class="menu-btn">
+                <button id="anim-switch" class="fas fa-stop-circle"></button>
+                <span class="tooltip">Toggle animation</span>
+            </div>
         </div>
 
         <div class="stars">
