add accessible names to links and buttons

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div id="root">
         <div class="menu">
             <div class="menu-btn">
-                <button id="theme-switch" class="fas fa-adjust"></button>
+                <button id="theme-switch"  aria-label="Toggle theme" class="fas fa-adjust"></button>
                 <span class="tooltip">Toggle theme</span>
             </div>
             <div class="menu-btn">
-                <button id="anim-switch" class="fas fa-stop-circle"></button>
+                <button id="anim-switch" aria-label="Toggle animation" class="fas fa-stop-circle"></button>
                 <span class="tooltip">Toggle animation</span>
             </div>
         </div>
@@ -73,16 +73,16 @@
                             <h3 class="skill-title">Back End</h3>
                             <p> <i class="fab fa-node-js"></i> Node.js</p>
                             <p> <i class="express"></i> Express.js</p>
-                            <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" /> PostgreSQL</p>
+                            <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" alt="PostgreSQL icon" aria-hidden="true" /> PostgreSQL</p>
                             <p> <i class="fas fa-database"></i> MongoDB</p>
-                            <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png" /> C#</p>
+                            <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png"  alt="C sharp icon" aria-hidden="true"/> C#</p>
                             <p> <i class="fab fa-python"></i> Python</p>
                         </div>
                         <div class="item">
                             <h3 class="skill-title">Other</h3>
-                            <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" /> Adobe Suite
+                            <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" alt="Adobe Suite icon" aria-hidden="true"/> Adobe Suite
                             </p>
-                            <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" /> Blender </p>
+                            <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" alt="Blender icon" aria-hidden="true"/> Blender </p>
 
                         </div>
                     </div>
@@ -97,13 +97,13 @@
                         <div class="item project">
                             <h3>Habit&eacute
                                 <a class="icon github" href="https://github.com/theduckfliesagain/co-habiters"
-                                    target="_blank"></a>
+                                    target="_blank" aria-label="Go to the Habit&eacute Github page"></a>
                             </h3>
 
                             <div class="content">
                                 <video autoplay muted loop
                                         src="https://thumbs.gfycat.com/PowerfulCheapInchworm-mobile.mp4" alt="Habit&eacute in use"></video>
-                                <a href="https://habite.netlify.app/" target="_blank">
+                                <a href="https://habite.netlify.app/" target="_blank" aria-label="Go to the Habite&eacute website">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </div>
@@ -113,13 +113,13 @@
                         <div class="item project">
                             <h3>Consoul.log
                                 <a class="icon github" href="https://github.com/theduckfliesagain/consoul.log"
-                                    target="_blank"></a>
+                                    target="_blank" aria-label="Go to the Consoul.log Github page"></a>
                             </h3>
                             
                             <div class="content">
                                 <video autoplay muted loop
                                         src="https://thumbs.gfycat.com/JovialShyCottontail-mobile.mp4" alt="Consoul.log in use"></video>
-                                <a href="https://consoul-log.netlify.app/" target="_blank">
+                                <a href="https://consoul-log.netlify.app/" target="_blank" aria-label="Go to the  Consoul.log website">
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </div>
