update meta information

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0c0c0c"/>
+    <meta name="description" content="The portfolio of developer Rishi Bhugobaun. Learn about my skills and recent projects.">
     <!-- STYLES -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./styles/css/main.css">
@@ -39,7 +41,6 @@
                 </header>
 
                 <section class="about">
-                    <a></a>
                     <h2>A bit about me</h2>
                     <p>
                         Hey there! I'm a physics graduate who loves learning new technologies. I'm currently training to
@@ -54,7 +55,6 @@
                 </section>
 
                 <section class="skills">
-                    <a></a>
                     <h2>Skills</h2>
                     <p>
                         I'm always looking to learn new things to widen my skillset, but here are some of software and
@@ -73,16 +73,16 @@
                             <h3 class="skill-title">Back End</h3>
                             <p> <i class="fab fa-node-js"></i> Node.js</p>
                             <p> <i class="express"></i> Express.js</p>
-                            <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" alt="PostgreSQL icon" aria-hidden="true" /> PostgreSQL</p>
+                            <p> <img src="https://img.icons8.com/material/24/ffffff/postgreesql.png" alt="" aria-hidden="true" /> PostgreSQL</p>
                             <p> <i class="fas fa-database"></i> MongoDB</p>
-                            <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png"  alt="C sharp icon" aria-hidden="true"/> C#</p>
+                            <p> <img src="https://img.icons8.com/ios-filled/24/ffffff/c-sharp-logo.png"  alt="" aria-hidden="true"/> C#</p>
                             <p> <i class="fab fa-python"></i> Python</p>
                         </div>
                         <div class="item">
                             <h3 class="skill-title">Other</h3>
-                            <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" alt="Adobe Suite icon" aria-hidden="true"/> Adobe Suite
+                            <p><img src="https://img.icons8.com/ios/24/ffffff/adobe-creative-cloud.png" alt="" aria-hidden="true"/> Adobe Suite
                             </p>
-                            <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" alt="Blender icon" aria-hidden="true"/> Blender </p>
+                            <p><img src="https://img.icons8.com/ios-filled/24/ffffff/blender-3d.png" alt="" aria-hidden="true"/> Blender </p>
 
                         </div>
                     </div>
@@ -90,7 +90,6 @@
 
                 <section class="work">
                     <h2>Recent Projects</h2>
-
                     <p>Here are some of things I've worked on recently while training at futureproof!</p>
 
                     <div class="item-container recent projects">
@@ -171,7 +170,6 @@
                     <div class="contact"></div>
                     <ul>
                         <li>
-                            
                             <a href="mailto:rishi_bhugobaun@yahoo.co.uk">
                                 <i class="fas fa-envelope"></i>rishi_bhugobaun<span class="break">@yahoo.co.uk</span>
                             </a>
