add dynamic section with progress bar

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="height=device-height, 
+    width=device-width, initial-scale=1.0, 
+    minimum-scale=1.0, maximum-scale=1.0, 
+    user-scalable=no">
     <meta name="theme-color" content="#0c0c0c" />
     <meta name="description"
         content="The portfolio of developer Rishi Bhugobaun. Learn about my skills and recent projects.">
@@ -42,7 +45,7 @@
                 <header class="intro">
                     <h1 id="page-title">Hi, <br> I'm Rishi</h1>
                     <p> Fullstack developer in training. </p>
-                    <div class="dynamic">
+                    <div class="dynamic hidden">
                         <label for="prog">Computer nerd status</label>
                         <progress id="prog" value="86" max="100">x86</progress>
                     </div>
