--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     user-scalable=no">
     <meta name="theme-color" content="#0c0c0c" />
     <meta name="description"
-        content="The portfolio of developer Rishi Bhugobaun. Learn about my skills and recent projects.">
+        content="The portfolio of developer in training Rishi Bhugobaun. Learn about my skills and recent projects.">
     <!-- STYLES -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Poppins&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="./styles/css/main.css">
     <!-- ICONS -->
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <!-- SCRIPTS -->
     <script src="https://kit.fontawesome.com/6180fcdf0c.js" crossorigin="anonymous"></script>
-    <script defer src="./node_modules/particles.js/particles.js"></script>
     <script defer src="bundle.js"></script>
     
     <title>Rishi B - Portfolio</title>
