add project content

--- a/index.html
+++ b/index.html
@@ -110,6 +110,28 @@
 
                     <div class="item-container recent projects">
                         <div class="item project">
+                            <h3>Quizards
+                                <a class="icon github" href="https://github.com/theduckfliesagain/QuizApp"
+                                    target="_blank" aria-label="Go to the Habit&eacute Github page"></a>
+                            </h3>
+
+                            <div class="content">
+                                <video autoplay muted loop
+                                    src="https://thumbs.gfycat.com/SillyEverlastingBarnowl-mobile.mp4"
+                                    alt="Habit&eacute in use"></video>
+                                <a href="https://quizards.netlify.app/" target="_blank"
+                                    aria-label="Go to the Quizards website">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                            </div>
+
+                            <p>Quizards is a web app that lets you play a quiz with your friends, wherever they may be!
+                                <br>
+                                Uses Socket.io to deliver questions from the OpenTriviaDB API to all users, whose scores and highscore are stored in an SQL database. Frontend in React, using Redux to store user info and process backend requests.
+                            </p>
+                        </div>
+
+                        <div class="item project">
                             <h3>Habit&eacute
                                 <a class="icon github" href="https://github.com/theduckfliesagain/co-habiters"
                                     target="_blank" aria-label="Go to the Habit&eacute Github page"></a>
@@ -117,7 +139,7 @@
 
                             <div class="content">
                                 <video autoplay muted loop
-                                    src="https://thumbs.gfycat.com/PowerfulCheapInchworm-mobile.mp4"
+                                    src="https://thumbs.gfycat.com/PeskySpeedyBantamrooster-mobile.mp4"
                                     alt="Habit&eacute in use"></video>
                                 <a href="https://habite.netlify.app/" target="_blank"
                                     aria-label="Go to the Habite&eacute website">
