add project content

--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
                     <p>Here are some of things I've worked on recently while training at futureproof!</p>
 
                     <div class="item-container recent projects">
+                         <div class="item project">
+                            <h3>JobbaHunt
+                                <a class="icon github" href="https://github.com/theduckfliesagain/Career_App"
+                                    target="_blank" aria-label="Go to the JobbaHunt Github page"></a>
+                            </h3>
+
+                            <div class="content">
+                                <video autoplay muted loop
+                                    src="https://thumbs.gfycat.com/ShinyPhysicalButterfly-mobile.mp4"
+                                    alt="JobbaHunt in use"></video>
+                                <a href="https://jobbahunt.netlify.app/" target="_blank"
+                                    aria-label="Go to the JobbaHunt website">
+                                    <i class="fas fa-external-link-alt"></i>
+                                </a>
+                            </div>
+
+                            <p>JobbaHunt is a full stack job search app built using React and Django with PostgreSQL and AWS S3 for database and storage. Users can create an account, search jobs on Reed API, save jobs, update progress of job applications and collect points that can be exchanged for rewards!
+                            </p>
+                        </div>
+
                         <div class="item project">
                             <h3>Quizards
                                 <a class="icon github" href="https://github.com/theduckfliesagain/QuizApp"
